--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
+    "react-indexed-db": "^1.0.12",
     "react-scripts": "3.4.1"
   },
   "scripts": {
