--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
+    "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
     "react-indexed-db": "^1.0.12",
     "react-scripts": "3.4.1"
